--- a/src/templates/confirmationPayEmail.html
+++ b/src/templates/confirmationPayEmail.html
@@ -49,7 +49,7 @@
       }
 
       .x_main .x_header__inner-container {
-        padding: 40px 16px;
+        padding: 20px 16px 40px;
       }
       .x_main .x_header__margin-bottom {
         font-size: 0;
@@ -316,8 +316,8 @@
                                   <tr>
                                     <td class="x_header__subtitle">
                                       Hola {{firstname}}, hemos recibido tu pago
-                                      y queremos confirmarte que hemos comenzado
-                                      a preparar tu pedido.
+                                      y queremos confirmarte que ya estamos
+                                      preparando tu pedido.
                                     </td>
                                   </tr>
                                 </tbody>
