--- a/src/templates/confirmationPayEmail.html
+++ b/src/templates/confirmationPayEmail.html
@@ -364,7 +364,7 @@
                       >
                         <tbody>
                           <tr>
-                            <td><strong>Productos</strong></td>
+                            <td><strong>Detalle de productos</strong></td>
                             <td
                               style="
                                 white-space: nowrap;
