style: Se actualiza la propiedad white-space del elemento td de precios

--- a/src/templates/confirmationPayEmail.html
+++ b/src/templates/confirmationPayEmail.html
@@ -373,19 +373,13 @@
                                 padding: 40px 12px;
                               "
                             >
-                              <strong
-                                ><span
-                                  class="x_highlight"
-                                  data-ogsb=""
-                                  style="
-                                    background-color: rgb(
-                                      79,
-                                      79,
-                                      83
-                                    ) !important;
-                                  "
-                                  >Pedido {{reference}}</span
-                                ></strong
+                              <span
+                                class="x_highlight"
+                                data-ogsb=""
+                                style="
+                                  background-color: rgb(79, 79, 83) !important;
+                                "
+                                >Pedido {{reference}}</span
                               >
                             </td>
                           </tr>
