style: Se actualiza la propiedad padding del elemento td de precios

--- a/src/templates/confirmationPayEmail.html
+++ b/src/templates/confirmationPayEmail.html
@@ -472,7 +472,10 @@
                               </table>
                             </td>
                             <td
-                              style="white-space: nowrap; vertical-align: top"
+                              style="
+                                white-space: nowrap !important;
+                                vertical-align: top;
+                              "
                               align="right"
                             >
                               {{total_products}} €
