feat: Se implementa el punto final para la plantilla de envios

--- a/src/templates/confirmationShipEmail.html
+++ b/src/templates/confirmationShipEmail.html
@@ -423,12 +423,12 @@
                                                 height="24"
                                                 width="24"
                                                 alt="location"
-                                                src="/transport.png"
+                                                src="https://www.toolstock.info/img/transport.png"
                                                 data-imagetype="External"
                                               />
                                             </td>
                                             <td style="width: 24px"></td>
-                                            <td>Transportista: {{address}}</td>
+                                            <td>Transportista: {{carrier}}</td>
                                           </tr>
                                         </tbody>
                                       </table>
@@ -461,14 +461,14 @@
                                                 height="24"
                                                 width="24"
                                                 alt="location"
-                                                src="/qr.png"
+                                                src="https://www.toolstock.info/img/qr.png"
                                                 data-imagetype="External"
                                               />
                                             </td>
                                             <td style="width: 24px"></td>
                                             <td>
                                               Nº de seguimiento:
-                                              {{traking_number}}
+                                              {{tracking_number}}
                                             </td>
                                           </tr>
                                         </tbody>
@@ -502,7 +502,7 @@
                                                 height="24"
                                                 width="24"
                                                 alt="location"
-                                                src="/tracking.png"
+                                                src="https://www.toolstock.info/img/tracking.png"
                                                 data-imagetype="External"
                                               />
                                             </td>
@@ -556,7 +556,7 @@
                                                 data-auth="NotApplicable"
                                                 rel="noopener noreferrer"
                                                 target="_blank"
-                                                href="http://extranet.gls-spain.es/Extranet/public/ExpedicionASM.aspx?codigo={{traking_number}}&cpDst={{cp_destination}}"
+                                                href="http://extranet.gls-spain.es/Extranet/public/ExpedicionASM.aspx?codigo={{tracking_number}}&cpDst={{cp_destination}}"
                                                 title="Enlace de seguimiento"
                                                 data-linkindex="0"
                                                 data-ogsc=""
