--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -6,11 +6,19 @@
     <title>Document</title>
   </head>
   <body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
     <div
       style="
         width: 210mm;
-        min-height: 297mm;
-        padding: 2rem 3rem;
+        height: 297mm;
+        max-height: 297mm;
+        padding: 2rem;
         background-color: white;
         font-family: Helvetica, Arial, sans-serif, sans-serif;
         font-size: 12px;
@@ -59,7 +67,7 @@
         <div
           style="
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr;
             gap: 20px;
             margin-bottom: 20px;
           "
@@ -74,14 +82,14 @@
             <p style="margin: 0 0 5px 0">{clientState}{clientCountry}</p>
             <p style="margin: 0">N.I.F. {clientNIF}</p>
           </div>
-          <div style="border: 1px solid #000; padding: 10px">
+          <!-- <div style="border: 1px solid #000; padding: 10px">
             <h2 style="font-size: 12px; font-weight: bold; margin-bottom: 10px">
               DIRECCIÓN DE ENVÍO FACTURA:
             </h2>
             <p style="margin: 0 0 5px 0">{shippingName}</p>
             <p style="margin: 0 0 5px 0">{shippingAddress}</p>
             <p style="margin: 0">{shippingCity}</p>
-          </div>
+          </div> -->
         </div>
 
         <div
@@ -310,7 +318,7 @@
           <small style="font-weight: bold; margin: 0 0 5px 0; display: block"
             >VENCIMIENTOS</small
           >
-          <small style="margin: 0">{date} {total.toFixed(2)} Tarjeta</small>
+          <small style="margin: 0">{date} {total.toFixed(2)}</small>
         </div>
 
         <div style="font-size: 10px; color: #666">
