fix:Se corrigen rutas de desarrollo de imagenes por las de produccion

--- a/src/templates/confirmationInvoiceEmail.html
+++ b/src/templates/confirmationInvoiceEmail.html
@@ -18,7 +18,8 @@
         max-width: 1200px;
       }
       .x_main .x_header__container {
-        background: url(/invoice.png) no-repeat bottom right !important;
+        background: url(https://www.toolstock.info/img/invoice.png) no-repeat
+          bottom right !important;
         background-size: 250px !important;
         border-radius: 0 0 120px 0;
         object-fit: contain;
@@ -148,7 +149,8 @@
           color: white !important;
         }
         .x_main .x_header__container {
-          background: url(/invoice-dark.png) no-repeat bottom right !important;
+          background: url(https://www.toolstock.info/img/invoice-dark.png)
+            no-repeat bottom right !important;
           background-size: 250px !important;
         }
         .x_main .x_logo {
@@ -740,7 +742,7 @@
                                                 height="24"
                                                 width="24"
                                                 alt="location"
-                                                src="/card.png"
+                                                src="https://www.toolstock.info/img/card.png"
                                                 data-imagetype="External"
                                               />
                                             </td>
@@ -816,7 +818,7 @@
                                                 height="24"
                                                 width="24"
                                                 alt="location"
-                                                src="/location_invoice.png"
+                                                src="https://www.toolstock.info/img/location_invoice.png"
                                                 data-imagetype="External"
                                               />
                                             </td>
@@ -936,12 +938,13 @@
                                         ¡Gracias por tu compra! 🌟
                                       </p>
                                       <small
-                                        >Si necesitas actualizar algún dato de
-                                        tu factura, no dudes en contactarnos a
-                                        través de nuestros canales de atención
-                                        indicados al final de este correo.
-                                        Estaremos encantados de ayudarte.</small
-                                      >
+                                        >Si necesitas realizar algún cambio en
+                                        tu factura o tienes cualquier otra
+                                        consulta, estamos aquí para ayudarte. No
+                                        dudes en contactarnos a través de
+                                        nuestros canales de atención indicados
+                                        al final de este correo.
+                                      </small>
                                       <div style="margin-top: 10px">
                                         <small>Atentamente,</small>
                                       </div>
