fix:Se corrige el formato de recepcion del cuerpo de la solicitud para Facturas

--- a/src/templates/confirmationInvoiceEmail.html
+++ b/src/templates/confirmationInvoiceEmail.html
@@ -741,7 +741,7 @@
                                                 "
                                                 height="24"
                                                 width="24"
-                                                alt="location"
+                                                alt="icono de tarjeta"
                                                 src="https://www.toolstock.info/img/card.png"
                                                 data-imagetype="External"
                                               />
@@ -817,7 +817,7 @@
                                                 "
                                                 height="24"
                                                 width="24"
-                                                alt="location"
+                                                alt="icono de direccion"
                                                 src="https://www.toolstock.info/img/location_invoice.png"
                                                 data-imagetype="External"
                                               />
