--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -33,22 +33,18 @@
           style="
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin-bottom: 20px;
           "
         >
           <img
             src="https://www.toolstock.info/img/logo.png"
             alt="TOOL STOCK"
-            style="width: 200px; height: 75px"
+            style="width: 150px; height: 60px"
           />
 
           <h1
-            style="
-              font-size: 70px;
-              font-weight: bold;
-              margin: 0;
-              color: #666666;
-            "
+            style="font-size: 55px; font-weight: 600; margin: 0; color: #666666"
           >
             <b>Factura</b>
           </h1>
@@ -69,7 +65,7 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
           "
         >
           <div style="border: 1px solid #000; padding: 10px">
@@ -82,14 +78,6 @@
             <p style="margin: 0 0 5px 0">{clientState}{clientCountry}</p>
             <p style="margin: 0">N.I.F. {clientNIF}</p>
           </div>
-          <!-- <div style="border: 1px solid #000; padding: 10px">
-            <h2 style="font-size: 12px; font-weight: bold; margin-bottom: 10px">
-              DIRECCIÓN DE ENVÍO FACTURA:
-            </h2>
-            <p style="margin: 0 0 5px 0">{shippingName}</p>
-            <p style="margin: 0 0 5px 0">{shippingAddress}</p>
-            <p style="margin: 0">{shippingCity}</p>
-          </div> -->
         </div>
 
         <div
@@ -156,7 +144,7 @@
         </div>
       </div>
 
-      <div style="height: 100vh; border: 1px solid #000; margin-bottom: 20px">
+      <div style="height: 100vh; border: 1px solid #000; margin-bottom: 10px">
         <table
           style="
             width: 100%;
@@ -230,7 +218,7 @@
 
       <div>
         <table
-          style="width: 100%; border-collapse: collapse; margin-bottom: 20px"
+          style="width: 100%; border-collapse: collapse; margin-bottom: 10px"
         >
           <thead>
             <tr>
